--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=wallet
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = lucky146
+spring.sql.init.mode = never
+server.port = 8090
